<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity" >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/add_controller">
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    
		    <TextView
		        android:layout_margin="10dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/username" />
		    <EditText 
		        android:layout_alignParentRight="true"
		        android:id="@+id/username"
		        android:inputType="text"
		        android:hint="@string/username"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		    
		    
		    <TextView
		        android:layout_margin="10dp"
		        android:layout_below="@+id/username"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/password" />
		    
		    <EditText 
		        android:id="@+id/password"
		        android:layout_below="@+id/username"
		        android:layout_alignParentRight="true"
		        android:inputType="textPassword"
		        android:hint="@string/password"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		    
		    <TextView
		        android:layout_margin="10dp"
		        android:layout_below="@+id/password"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/host" />
		    <EditText 
		        android:layout_below="@+id/password"
		        android:layout_alignParentRight="true"
		        android:id="@+id/host"
		        android:inputType="text"
		        android:hint="@string/host"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		    
		    <TextView
		        android:layout_margin="10dp"
		        android:layout_below="@+id/host"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/port" />
		    <EditText 
		        android:layout_below="@+id/host"
		        android:layout_alignParentRight="true"
		        android:id="@+id/port"
		        android:text="22"
		        android:inputType="number"
		        android:hint="@string/port"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	    
	    
	    </RelativeLayout>
    </ScrollView>
        <Button 
            android:id="@+id/add_controller"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:minHeight="50dp"
        android:textColor="@color/button_text_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_controller"
        android:background="@drawable/add_button"
        android:onClick="addController"/>

</RelativeLayout>